Correccion Ruta index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>Platzi Intelligence Agency</title>
 
-<link rel="stylesheet" href="../src/css/main.css" />
+<link rel="stylesheet" href="src/css/main.css" />
 
 <link
       rel="stylesheet"
@@ -22,9 +22,9 @@
 <div class="row">
 <div class="col p-0">
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-<a class="navbar-brand p-0" href="../">
+<a class="navbar-brand p-0" href="/">
 <img
-                    src="../src/img/isotipo.png"
+                    src="src/img/isotipo.png"
                     width="50"
                     height="50"
                     class="d-inline-block align-top"
@@ -45,12 +45,12 @@
 <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
 <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
 <li class="nav-item active">
-<a class="nav-link" href="../"
+<a class="nav-link" href="/"
                         >Inicio <span class="sr-only">(current)</span></a
                       >
 </li>
 <li class="nav-item">
-<a class="nav-link" href="../cia">CIA</a>
+<a class="nav-link" href="cia">CIA</a>
 </li>
 </ul>
 </div>
@@ -76,12 +76,12 @@
 <a href="https://platzi.com" class="platzi_logo" target="_blank">
 <img
                   width="20"
-                  src="../src/img/platzi-isotipo.png"
+                  src="src/img/platzi-isotipo.png"
                   alt="Isotipo de Platzi"
                 />
 <img
                   height="20"
-                  src="../src/img/platzi-logotipo.png"
+                  src="src/img/platzi-logotipo.png"
                   alt="Logotipo de Platzi"
                 />
 </a>
